--- a/Water Reminder/Water Reminder/Base.lproj/Main.storyboard
+++ b/Water Reminder/Water Reminder/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bYn-4T-St9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bYn-4T-St9">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -23,9 +23,42 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Water reminder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6I-OB-76U">
+                                <rect key="frame" x="99.5" y="64" width="215" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="215" id="O7P-zi-6c3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="30"/>
+                                <color key="textColor" name="buttonBlue"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uXy-5p-g1d">
+                                <rect key="frame" x="20" y="598" width="140" height="45"/>
+                                <color key="backgroundColor" name="buttonBlue"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="JK9-yC-WMD"/>
+                                    <constraint firstAttribute="height" constant="45" id="JUC-oX-HxX"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="c63-lV-Koo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="15"/>
+                                <state key="normal" title="Only clean water">
+                                    <color key="titleColor" systemColor="secondarySystemBackgroundColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="measureOnlyCleanWater:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ILn-DR-Z53"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VZX-Vn-h2d">
-                                <rect key="frame" x="249" y="111" width="135" height="30"/>
-                                <state key="normal" title="Change parameters"/>
+                                <rect key="frame" x="254" y="598" width="140" height="45"/>
+                                <color key="backgroundColor" name="buttonBlue"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="Lei-d4-Kkk"/>
+                                    <constraint firstAttribute="height" constant="45" id="pVB-Ul-pOV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="15"/>
+                                <state key="normal" title="Parameters">
+                                    <color key="titleColor" systemColor="secondarySystemBackgroundColor"/>
+                                </state>
                                 <connections>
                                     <segue destination="P4D-VI-T1l" kind="show" id="dJd-jS-0dH"/>
                                 </connections>
@@ -34,16 +67,21 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="uXy-5p-g1d" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="0yr-mY-PzC"/>
                             <constraint firstItem="X9N-BE-7Bp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Hbz-Yv-qaG"/>
-                            <constraint firstItem="VZX-Vn-h2d" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="P4g-ib-Ls2"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VZX-Vn-h2d" secondAttribute="trailing" constant="30" id="Tcc-NX-aFR"/>
-                            <constraint firstItem="VZX-Vn-h2d" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="67" id="bsD-cC-X9q"/>
+                            <constraint firstItem="X9N-BE-7Bp" firstAttribute="top" secondItem="uXy-5p-g1d" secondAttribute="bottom" constant="57" id="LNH-cN-HeZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VZX-Vn-h2d" secondAttribute="trailing" constant="20" id="Tcc-NX-aFR"/>
+                            <constraint firstItem="VZX-Vn-h2d" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="554" id="bsD-cC-X9q"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="X9N-BE-7Bp" secondAttribute="bottom" constant="140" id="kOY-tA-CGj"/>
+                            <constraint firstItem="j6I-OB-76U" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qvP-4y-CST"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="X9N-BE-7Bp" secondAttribute="trailing" constant="50" id="tLQ-Lu-7H6"/>
+                            <constraint firstItem="j6I-OB-76U" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="yzG-hD-o3I"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="hBs-bG-E8h"/>
                     <connections>
+                        <outlet property="btnOnlyCleanWater" destination="uXy-5p-g1d" id="LuV-sP-EYl"/>
+                        <outlet property="btnUpdateParameters" destination="VZX-Vn-h2d" id="taZ-BP-m30"/>
                         <outlet property="quickOptionsLabel" destination="X9N-BE-7Bp" id="c2p-hh-S61"/>
                     </connections>
                 </viewController>
@@ -114,11 +152,17 @@
                                 <rect key="frame" x="14" y="576" width="160" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelUserData:" destination="P4D-VI-T1l" eventType="touchUpInside" id="frE-Bd-7xp"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rmS-pN-I6S">
                                 <rect key="frame" x="240" y="576" width="160" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Confirm changes"/>
+                                <connections>
+                                    <action selector="btnConfirmUser:" destination="P4D-VI-T1l" eventType="touchUpInside" id="8f0-m3-kea"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fse-qg-gau">
                                 <rect key="frame" x="21" y="432" width="153" height="32"/>
@@ -185,6 +229,12 @@
         <namedColor name="TextBlue">
             <color red="0.0" green="0.0" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="buttonBlue">
+            <color red="0.13725490868091583" green="0.27058824896812439" blue="0.61568629741668701" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
